# AI_Server

.claude/: settings.local.json
ai-server/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
ai-server/alembic/: env.py
ai-server/alembic/versions/: 0001_initial_schema.py  0002_recipe_hash.py
ai-server/src/: config.py  main.py
ai-server/src/ai_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ai-server/src/api/: batches.py  health.py  ingest.py  query.py  report.py
ai-server/src/db/: batches.py  embeddings.py  ingest_jobs.py  pool.py  reports.py  schema.sql
ai-server/src/llm/: client.py  prompts.py  report_generator.py
ai-server/src/models/: dispatch_batch.py  kpi.py  query.py  report.py
ai-server/src/pipeline/: chunker.py  embedder.py  job_worker.py  jobs.py  preprocessor.py
ai-server/src/rag/: context_builder.py  reranker.py  retriever.py
ai-server/src/scheduler/: report_scheduler.py
ai-server/src/utils/: auth.py  logging_config.py  service_jwt.py
ai-server/tests/: conftest.py  test_batches.py  test_e2e.py  test_embedder.py  test_ingest.py  test_ingest_jobs.py  test_job_tracker.py  test_preprocessor.py  test_query.py  test_report_generator.py  test_retriever.py
ai-server/tests/fixtures/: large_batch_generator.py
