[project]
name = "ai-server"
version = "0.1.0"
description = "DS Vision Inspection AI Analysis Server"
authors = [
    {name = "Senior Architect", email = "architect@example.com"}
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "anthropic>=0.34.0",
    "sentence-transformers>=3.0.0",
    "onnxruntime>=1.18.0",
    "optimum[onnxruntime]>=1.18.0",
    "torch>=2.3.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "apscheduler>=3.10.0",
    "python-multipart>=0.0.9",
    "pyjwt>=2.8.0"
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "httpx>=0.27.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
